tests/health/gold/sdk/tests__regress__issue12-test-force.toit.gold
tests/regress/issue12_test_force.toit:17:10: error: Class 'A' does not have any method 'hash-code'
    this.hash_code
         ^~~~~~~~~
